--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"private": true,
 	"version": "0.0.1",
 	"engines": {
-    	"node": ">=22.0.0"
+		"node": ">=22.0.0"
 	},
 	"type": "module",
 	"scripts": {
@@ -37,6 +37,7 @@
 	},
 	"dependencies": {
 		"@directus/sdk": "^20.3.0",
+		"@lucide/svelte": "^0.562.0",
 		"dotenv": "^17.2.3",
 		"maplibre-gl": "^5.15.0"
 	}
